@@ -69,7 +69,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: http://hexo.io/plugins/
 ## Themes: http://hexo.io/themes/
-theme: hexo-theme-yilia
+theme: hexo-theme-yelee
 
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
