@@ -1,0 +1,192 @@
+
+# >>> Basic Setup | 基础设置 <<<
+
+# Header | 主菜单
+## About Page: `hexo new page about`
+## Tags Cloud Page: `hexo new page tags`
+menu:
+  主页: /
+  博文: /archives
+  日常: /tags/日常
+  技术: /tags/技术
+
+# Link to your avatar | 填写头像地址
+avatar: /img/avatar.jpg
+
+# Small icon of Your site | 站点小图标地址
+favicon: /img/avatar.jpg
+
+# Social info. Bar | 社交信息展示
+## Keep "mailto:" in Email | 设置 Email 时保留 "mailto:"
+## Encrypt email 加密邮件地址 http://ctrlq.org/encode/
+## RSS requires a plugin to take effect | 使用 RSS 需先安装对应插件
+## https://github.com/hexojs/hexo-generator-feed
+
+subnav:
+  GitHub: "https://github.com/Arondight"
+  新浪微博: "http://weibo.com/iSpeller"
+  #V2EX: "#"
+  RSS: "/atom.xml"
+  #知乎: "zhihu"
+  #豆瓣: "douban"
+  #简书: "jianshu"
+  #SegmentFault: ""
+  #网易云音乐: "netease"
+  #Facebook: "#"
+  #Google: "#"
+  #Twitter: "#"
+  #LinkedIn: "#"
+  #QQ: "#"
+  #微信: "speller"
+  #PayPal: "#"
+  #StackOverflow: "#"
+  #Instagram: "#"
+  #Flickr: "#"
+  #reddit: ""
+  #Medium: ""
+  #TiddlyWiki: ""
+  #Tumblr: ""
+  #_500px: ""
+  Email: "mailto:mail@arondight.me"
+
+# >>> Conments 评论系统 <<<
+# Chose ONE as your comment system and keep others disable.
+# 选一个作为网站评论系统，其他保持禁用。
+
+disqus:
+  #on: true
+  shortname:
+  # https://help.disqus.com/customer/en/portal/articles/466208-what-s-a-shortname-
+  # It is unnecessary to enable disqus here if
+  # you have set "disqus_shortname" in your site's "_config.yml"
+
+duoshuo:
+  on: true
+  domain: arondight
+  # 是否开启多说评论，http://duoshuo.com/create-site/
+  # 使用上面网址登陆你的多说，然后创建站点，在 domain 中填入你设定的域名前半部分
+  # http://<要填的部分>.duoshuo.com (domain只填上<>里的内容，不要填整个网址)
+
+youyan:
+  #on: true
+  id:
+  # 是否开启友言评论，http://www.uyan.cc/index.php
+  # id 中填写你的友言用户数字ID，注册后进入后台管理即可查看
+  # 友言服务在 Web 环境下运行，普通本地环境无法查看，请部署后在线上测试。
+
+
+# >>> Style Customisation 样式自定义 <<<
+
+# Background | 背景
+## "n": /yelee/source/background/bg-n.jpg
+## "0": 灰白背景
+background_image: 0
+
+highlight_style:
+  #on: true
+  inline_code: 1  # Value: 0 - 9 可选
+  code_block: 1  # Value: 0 - 4
+  # Set inline_code to style highlight text
+  # Chose a highlight theme for code block
+  # 通过 inline_code 切换内置文本高亮样式
+  # 通过 code_block 切换内置代码高亮配色主题
+
+blockquote_style:
+  #on: true
+  blockquote: 1  # Value: 0 - 7 可选
+  # 自定义文章「引用部分」的样式
+
+# 左边栏宽度 px
+left_col_width: 300
+
+# Copyright info. of post | 文末版权信息
+copyright: false
+
+# Table of contents | 文章目录
+toc: true
+
+# 目录中标题不换行
+# Keep TOC title on the same line |
+toc_nowrap: false
+
+# 自定义"阅读全文"链接按钮的显示文字
+# Customize the text on excerpt link
+excerpt_link: "阅读更多"
+
+# 是否显示边栏中的搜索框（仅样式，未添加搜索功能）
+# Search Box in left column
+search_box: false
+
+# 是否开启主页及加载头像时的动画效果
+# Animation in Homepage and Loading avatar
+animate: true
+
+# Load jQuery UI to style tooltips
+# 工具提示框样式美化
+jquery_ui: true
+
+# >>> Small features | 小功能设置 <<<
+
+# 是否开启边栏多标签切换
+# Birdhouse button in left column
+tagcloud: true
+
+# Blogroll, Link exchange | 友情链接
+friends:
+  1987: http://site.arondight.me
+  3890929: http://isliberty.me
+  Shy泠的博客: https://shyling.com
+  Sonico's Home: http://blog.supvesonico.moe
+  Yanhao's Blog: http://www.yanhao.site
+  玻璃齿轮: http://blog.winkidney.com
+  蔓舞寻樱的博客: https://alleysakura.com
+  中土國民會全球資訊網: https://blog-netarmy.rhcloud.com
+#friends: false
+
+#是否开启“关于我”。
+aboutme: 平凡的愚者，无梦的旅人。
+#aboutme: false
+
+# 是否在新窗口打开链接
+# Open ALL link in a new tab
+open_in_new: false
+
+# Customize feed link 自定义订阅地址
+rss: /atom.xml
+
+
+# >>> Vendors | 第三方工具 & 服务 <<<
+
+# images viewer | 图片浏览器
+## http://www.fancyapps.com/fancybox/
+fancybox: true
+
+# Display Math(LaTeX, MathML...) | 数学公式支持
+## https://www.mathjax.org/
+mathjax: false
+
+# Socail Share | 是否开启分享
+share: false
+
+# 百度、谷歌站长验证。填写 HTML 标签 content
+# Site Verification for Google and Baidu. HTML label content.
+baidu_site:
+google_site:
+
+# Fill in Google Analytics tracking ID, #e.g. UA-XXXXX-X
+google_analytics: 'UA-72246506-1'
+
+# Add for Baidu Tongji
+baidu_tongji: '55d7496b74b59fcaa2a67bd11b36a7b6'
+
+# 不蒜子网站计数设置
+# http://ibruce.info/2015/04/04/busuanzi/
+visit_counter:
+  on: true
+  site_visit: 访客量
+  page_visit: 阅读量
+
+# GitHub Repo Widget
+# https://github.com/hustcc/GitHub-Repo-Widget.js
+github_widget: false
+
