@@ -1,69 +1,0 @@
-# Header
-menu:
-  主页: /
-  所有文章: /archives
-  日常: /tags/日常
-  技术: /tags/技术
-
-# SubNav
-subnav:
-  github: "https://github.com/Arondight"
-  weibo: "http://weibo.com/iSpeller"
-  #zhihu: "#"
-  #douban: "#"
-  #facebook: "#"
-  #google: "#"
-  #twitter: "#"
-  #linkedin: "#"
-  rss: "/atom.xml"
-  mail: "mailto:mail@arondight.me"
-
-rss: /atom.xml
-
-# Content
-excerpt_link: more
-fancybox: true
-mathjax: true
-
-# 是否开启动画效果
-animate: true
-
-# 是否在新窗口打开链接
-open_in_new: false
-
-# Miscellaneous
-google_analytics: 'UA-72246506-1'
-baidu_tongji: '55d7496b74b59fcaa2a67bd11b36a7b6'
-favicon: /img/avatar.jpg
-
-#你的头像url
-avatar: /img/avatar.jpg
-#是否开启分享
-share_jia: false
-share_addthis: false
-#是否开启多说评论，填写你在多说申请的项目名称 duoshuo: duoshuo-key
-#若使用disqus，请在博客config文件中填写disqus_shortname，并关闭多说评论
-duoshuo: arondight
-#是否开启云标签
-tagcloud: true
-
-#是否开启友情链接
-#不开启——
-#friends: false
-#开启——
-friends:
-  1987: http://site.arondight.me
-  3890929: http://isliberty.me
-  Shy泠的博客: https://shyling.com
-  Sonico's Home: http://blog.supvesonico.moe
-  Yanhao's Blog: http://www.yanhao.site
-  玻璃齿轮: http://blog.winkidney.com
-  蔓舞寻樱的博客: https://alleysakura.com
-  中土國民會全球資訊網: https://blog-netarmy.rhcloud.com
-
-#是否开启“关于我”。
-#不开启——
-#aboutme: false
-#开启——
-aboutme: 平凡的愚者，无梦的旅人。
-
