@@ -1,3 +1,6 @@
+v2016-02-03
+  * Switch theme to hexo-theme-yelee
+
 v2016-01-29.1
   * Remove useless line in init.sh
 
